uso do Scanner para receber valores do terminal de forma segura

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ replay_pid*
 tipos-variaveis/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
 terminal/.vscode/settings.json
+uso-terminal/.vscode/settings.json
