Simulaçaõ de criação de conta banco de cliente

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ tipos-variaveis/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
 terminal/.vscode/settings.json
 uso-terminal/.vscode/settings.json
+conta-banco/.vscode/settings.json
