--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 tipos-variaveis/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
+controle-de-fluxo/.vscode/settings.json
+conta-banco/.vscode/settings.json
